# data-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/data_agent/: __init__.py  __main__.py  cli.py  edges.py  graph.py  state.py
src/data_agent/nodes/: __init__.py  planner.py  query_ga.py  query_pg.py  report.py
src/data_agent/templates/: report.html
tests/: __init__.py  test_edges.py  test_query_pg.py  test_report.py
